fixed the time to load function and changed the header alignment

--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -1,7 +1,11 @@
 a.navbar-brand{
+  position: relative;
+  top: 4px;
+  left: 15px;
   color: white;
   font-weight: 100;
   letter-spacing: .08em;
+  float: none;
   &:hover, &:active {
     color: white;
   }
